--- a/RESTassuredAutmation/test-output/old/Default suite/classes.html
+++ b/RESTassuredAutmation/test-output/old/Default suite/classes.html
@@ -4,14 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Test.Soap_XMLRequest</td>
+<td>Test.GetandPostEx</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>soapXML_Request</td>
+<td>Delete</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>patch</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>post_test</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>get_test</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Put</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
