--- a/RESTassuredAutmation/test-output/emailable-report.html
+++ b/RESTassuredAutmation/test-output/emailable-report.html
@@ -9,10 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6,744</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9,764</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Test.Soap_XMLRequest</td><td><a href="#m0">soapXML_Request</a></td><td rowspan="1">1740118458260</td><td rowspan="1">6685</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">Test.GetandPostEx</td><td><a href="#m0">Delete</a></td><td rowspan="1">1740286816209</td><td rowspan="1">2804</td></tr><tr class="passedeven"><td><a href="#m1">Put</a></td><td rowspan="1">1740286819021</td><td rowspan="1">955</td></tr><tr class="passedeven"><td><a href="#m2">get_test</a></td><td rowspan="1">1740286819979</td><td rowspan="1">5069</td></tr><tr class="passedeven"><td><a href="#m3">patch</a></td><td rowspan="1">1740286825057</td><td rowspan="1">883</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Test.Soap_XMLRequest#soapXML_Request</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">Test.GetandPostEx#Delete</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Test.GetandPostEx#Put</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Test.GetandPostEx#get_test</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Test.GetandPostEx#patch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
