--- a/RESTassuredAutmation/test-output/index.html
+++ b/RESTassuredAutmation/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\DELL\AppData\Local\Temp\testng-eclipse-1171031702\testng-customsuite.xml</span>
+                    <span>C:\Users\DELL\AppData\Local\Temp\testng-eclipse--1850315422\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Test.Soap_XMLRequest" class="method navigator-link" hash-for-method="soapXML_Request">soapXML_Request</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Test.GetandPostEx" class="method navigator-link" hash-for-method="Delete">Delete</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Test.GetandPostEx" class="method navigator-link" hash-for-method="Put">Put</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Test.GetandPostEx" class="method navigator-link" hash-for-method="get_test">get_test</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Test.GetandPostEx" class="method navigator-link" hash-for-method="patch">patch</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +137,35 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Test.Soap_XMLRequest</span>
+              <span class="class-name">Test.GetandPostEx</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="soapXML_Request">
-                  </a> <!-- soapXML_Request -->
-                  <span class="method-name">soapXML_Request</span>
+                  <a name="Delete">
+                  </a> <!-- Delete -->
+                  <span class="method-name">Delete</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Put">
+                  </a> <!-- Put -->
+                  <span class="method-name">Put</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="get_test">
+                  </a> <!-- get_test -->
+                  <span class="method-name">get_test</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="patch">
+                  </a> <!-- patch -->
+                  <span class="method-name">patch</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +173,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\DELL\AppData\Local\Temp\testng-eclipse-1171031702\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\DELL\AppData\Local\Temp\testng-eclipse--1850315422\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +182,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Test.Soap_XMLRequest&quot;/&gt;
+      &lt;class name=&quot;Test.GetandPostEx&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,16 +222,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'soapXML_Request')
-data.setCell(0, 2, 'Test.Soap_XMLRequest')
-data.setCell(0, 3, 6685);
+data.setCell(0, 1, 'get_test')
+data.setCell(0, 2, 'Test.GetandPostEx')
+data.setCell(0, 3, 5069);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'Delete')
+data.setCell(1, 2, 'Test.GetandPostEx')
+data.setCell(1, 3, 2804);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'Put')
+data.setCell(2, 2, 'Test.GetandPostEx')
+data.setCell(2, 3, 955);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'patch')
+data.setCell(3, 2, 'Test.GetandPostEx')
+data.setCell(3, 3, 883);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -210,9 +258,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">Test.GetandPostEx</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">post_test</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -221,10 +276,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Test.Soap_XMLRequest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Test.GetandPostEx</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">soapXML_Request</span>
+                <span class="method-name">Delete</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Put</span>
+                <span class="method-start">2812 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">get_test</span>
+                <span class="method-start">3770 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">patch</span>
+                <span class="method-start">8848 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
