--- a/RESTassuredAutmation/test-output/old/Default suite/methods.html
+++ b/RESTassuredAutmation/test-output/old/Default suite/methods.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="98ac89">  <td>25/02/20 22:14:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Soap_XMLRequest.soapXML_Request()[pri:0, instance:Test.Soap_XMLRequest@505fc5a4]">soapXML_Request</td> 
-  <td>main@1754444726</td>   <td></td> </tr>
+<tr bgcolor="98ac89">  <td>25/02/22 21:00:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetandPostEx.patch()[pri:0, instance:Test.GetandPostEx@25084a1e]">patch</td> 
+  <td>main@1776374725</td>   <td></td> </tr>
+<tr bgcolor="98ac89">  <td>25/02/22 21:00:19</td>   <td>-5078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetandPostEx.get_test()[pri:0, instance:Test.GetandPostEx@25084a1e]">get_test</td> 
+  <td>main@1776374725</td>   <td></td> </tr>
+<tr bgcolor="98ac89">  <td>25/02/22 21:00:19</td>   <td>-6036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetandPostEx.Put()[pri:0, instance:Test.GetandPostEx@25084a1e]">Put</td> 
+  <td>main@1776374725</td>   <td></td> </tr>
+<tr bgcolor="98ac89">  <td>25/02/22 21:00:16</td>   <td>-8848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetandPostEx.Delete()[pri:0, instance:Test.GetandPostEx@25084a1e]">Delete</td> 
+  <td>main@1776374725</td>   <td></td> </tr>
 </table>
